--- a/页面.md
+++ b/页面.md
@@ -1,10 +1,12 @@
+
 ## 1.restRecord.ftl 添加按钮
 ```
 <button id="btn_add" type="button" class="btn btn-primary" onclick="Export()">
     <span class="glyphicon glyphicon-cog" aria-hidden="true">导出Excel</span>
 </button>
 ```
-## 2. restRecord.js  增加导出的代码
+## 2. restRecord.js  增加导出的js代码
+static/script/timeAndAttendanceManagement/restRecord.js
 ```
 //https://www.cnblogs.com/linyijia/p/6118835.html
 //导出
