--- a/说明.md
+++ b/说明.md
@@ -1,3 +1,7 @@
 1.该代码，做的是 考勤中的“休息记录” 的导出功能
+
 2. 导出excel 是在服务器中。如果可能客户端要得到excel文件，需要增加下载的功能。
+
 3. 日期一个月的判断，这里是在前端 用js 进行了判断。
+
+4. 导出的 excel文件名，工作表名， 目前是写在程序里了， 这个要写在外面，如：配置文件了。  
