--- a/页面.md
+++ b/页面.md
@@ -11,7 +11,7 @@ static/script/timeAndAttendanceManagement/restRecord.js
 //https://www.cnblogs.com/linyijia/p/6118835.html
 //导出
 function Export() {
-
+    var monthNum = 1; //开始日期与结束日期，允许相差的月份
     var url = "/timeAndAttendanceManagement/exportRestRecord";
 
     //获取查询条件，封装成Json对象中
@@ -31,11 +31,17 @@ function Export() {
             return false;
         }
     }
+    /**
+     *  如果开始日期不空，结束日期为空，结束日期= 开始日期 +  一个月
+     */
     if (checkStartDate != "" && checkEndDate ==""){
-        checkEndDate = changeDate(checkStartDate,1);
+        checkEndDate = getDate(checkStartDate,monthNum);
     }
+    /**
+     *  如果开始日期为空，结束日期不空， 开始日期 = 结束日期 - 一个月
+     */
     if (checkStartDate == "" && checkEndDate !=""){
-        checkStartDate = changeDate(checkEndDate,-1);
+        checkStartDate = getDate(checkEndDate,-monthNum);
 
     }
     // return false;
