--- a/页面.md
+++ b/页面.md
@@ -103,7 +103,12 @@ function compareDate(date1,date2){
     return obj;
 }
 
-function changeDate(date,num) {
+/**
+ * 获取改变月份后的 日期
+ * @param date
+ * @param num
+ */
+function getDate(date,num) {
     var d = new Date(date);
     d.setMonth(d.getMonth() + num);  //增加月份
    var mon = d.getMonth()+1;
