--- a/后端代码.md
+++ b/后端代码.md
@@ -6,7 +6,49 @@
             <version>2.2.10</version>
         </dependency>
 ```
+
+## service/vo 增加 RestDateRecordExcel 实体类
+用于配置excel 字段样式展示
+com.compass.vo.RestDateRecordExcel
+```
+package com.compass.vo;
+
+import com.alibaba.excel.annotation.ExcelProperty;
+import com.alibaba.excel.annotation.write.style.ColumnWidth;
+import com.alibaba.excel.annotation.write.style.ContentRowHeight;
+import com.alibaba.excel.annotation.write.style.HeadRowHeight;
+import lombok.Data;
+
+@Data
+@ContentRowHeight(15)
+@HeadRowHeight(20)
+@ColumnWidth(25)
+public class RestDateRecordExcel {
+
+    @ExcelProperty("姓名")
+    private String userName;
+
+    @ExcelProperty("休息日期")
+    private String restDate;
+
+    @ExcelProperty("报备时间")
+    private String createAt;
+
+    @ExcelProperty("休息类型")
+    private String restType;
+
+    @ExcelProperty("累计休息天数(只记录)")
+    private String restDays;
+
+    @ExcelProperty("报备内容")
+    @ColumnWidth(50)
+    private String restContent;
+}
+
+```
+
 ##2. TimeAndAttendanceManagementService  增加
+
 ```
 
     public ResponseMessage exportRestRecord(RestDateRecord restDateRecord) {
