--- a/后端代码.md
+++ b/后端代码.md
@@ -1,4 +1,4 @@
-##1. service模块 pom.xml，添加依赖
+## 1、service模块 pom.xml，添加依赖
 ```
     <dependency>
             <groupId>com.alibaba</groupId>
@@ -7,7 +7,7 @@
         </dependency>
 ```
 
-## service/vo 增加 RestDateRecordExcel 实体类
+## 2、service/vo 增加 RestDateRecordExcel 实体类
 用于配置excel 字段样式展示
 com.compass.vo.RestDateRecordExcel
 ```
@@ -47,7 +47,7 @@ public class RestDateRecordExcel {
 
 ```
 
-##2. TimeAndAttendanceManagementService  增加
+## 3. TimeAndAttendanceManagementService  增加
 
 ```
 
@@ -126,7 +126,7 @@ public class RestDateRecordExcel {
     }
 ```
 
-##3.TimeAndAttendanceManagementController  增加
+## 4.TimeAndAttendanceManagementController  增加
 ```
 
     @PostMapping("exportRestRecord")
