--- a/下载/前端修改.md
+++ b/下载/前端修改.md
@@ -2,6 +2,12 @@
 
 ## 2.restRecord.js
 
+下载的请求，两种方式：
+
+1. window.open. 直接请求，进行下载。 因为‘日期参数’在前端 已做了验证。用这种方式更简单。
+
+2. 使用ajax请求，主要是进行后端验证， 请求成功后，再发 window.open请求，进行下载。（方法作用是：验证 + 请求）
+
 static/script/timeAndAttendanceManagement/restRecord.js
 ```
 //https://www.cnblogs.com/linyijia/p/6118835.html
@@ -51,9 +57,11 @@ function Export() {
     var downUrl = "/timeAndAttendanceManagement/exportRestRecord";
     downUrl=downUrl+"?userName="+checkUserName+"&checkStartDate="+checkStartDate+"&checkEndDate="+checkEndDate;
 
+    //请求方法1：直接下载
     // window.open(downUrl);
 
-    //提交json数据
+
+    //请求方法2： 先进行后端验证，再下载
     $.ajax({
         type: "POST",
         url: url,
